--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,73 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+        --font-inter: 'Inter-Variable', sans-serif;
+        --font-main: 'PressStart2P', monospace;
+        --watermark-border: #FFFFFF;
+        --watermark-color: #000000;
+        --background-color: #FFFFFF;
+        --unlike: var(--background-color);
+        --like-color: #FF0000;
+        --click-heart: #000000;
+        --shadow-like: drop-shadow(2px 2px 0px #000000);
+        --background-image: 
+        repeating-linear-gradient(
+            to left,
+            #d3d3d3 0 2px,
+            transparent 2px 4px
+        ),
+        linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a),
+        repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px);
+        --accent-color: #000000;
+        --header-color: #FFFFFF;
+}
+:root.theme-dark {
+    --font-inter: 'Inter-Variable', sans-serif;
+    --font-main: "PressStart2P", monospace;
+    --watermark-border: #000000;
+    --watermark-color: #00CC14;
+    --background-color: #000000;
+    --unlike: var(--background-color);
+    --like-color: #00CC14;
+    --click-heart: #000000;
+    --shadow-like: drop-shadow(2px 2px 0px #000000);
+    --background-image: repeating-linear-gradient(
+        to left,
+        #000000 0 2px,
+        transparent 2px 4px
+    ),
+    linear-gradient(to bottom,
+    #007F0C, #004306),
+    repeating-linear-gradient(to bottom, 
+    #000000 0 2px,
+    transparent 2px 4px);
+    --accent-color: #00CC14;
+    --header-color: #000000;
+}
+
+@media(prefers-color-scheme: dark) {
+    :root {
+    --font-inter: 'Inter-Variable', sans-serif;
+    --font-main: 'PressStart2P', monospace;
+    --watermark-border: #000000;
+    --watermark-color: #00CC14;
+    --background-color: #000000;
+    --like-color: #00CC14;
+    --click-heart: #000000;
+    --shadow-like: drop-shadow(2px 2px 0px #000000);
+    --background-image: repeating-linear-gradient(
+        to left,
+        #000000 0 2px,
+        transparent 2px 4px
+    ),
+    linear-gradient(to bottom,
+    #007F0C, #004306),
+    repeating-linear-gradient(to bottom, 
+    #000000 0 2px,
+    transparent 2px 4px);
+    --accent-color: #00CC14;
+    --header-color: #000000;
+}
+}
