--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,21 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --font-inter: 'Inter-Variable', sans-serif;
+    --font-main: 'PressStart2P', monospace;
+    --watermark-border: #FFFFFF;
+    --watermark-color: #000000;
+    --background-color: #FFFFFF;
+    --unlike: var(--background-color);
+    --like-color: #FF0000;
+    --click-heart: #000000;
+    --background-image: 
+    repeating-linear-gradient(
+        to left,
+        #d3d3d3 0 2px,
+        transparent 2px 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px);
+    --accent-color: #000000;
+    --header-color: #FFFFFF;
+}/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
