--- a/styles/themes.css
+++ b/styles/themes.css
@@ -16,15 +16,14 @@
         --click-heart: #000000;
         --shadow-like: drop-shadow(2px 2px 0px #000000);
         --background-image: 
-        repeating-linear-gradient(
-            to left,
-            #d3d3d3 0 2px,
-            transparent 2px 4px
-        ),
-        linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a),
-        repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px);
+        repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+        repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+        linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
         --accent-color: #000000;
         --header-color: #FFFFFF;
+        --font-variation-settings: 400;
+        --font-variation-title: 700;
+        --border-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
 }
 :root.theme-dark {
     --font-inter: 'Inter-Variable', sans-serif;
@@ -33,21 +32,18 @@
     --watermark-color: #00CC14;
     --background-color: #000000;
     --unlike: var(--background-color);
-    --like-color: #00CC14;
+    --like-color: #FF0000;
     --click-heart: #000000;
     --shadow-like: drop-shadow(2px 2px 0px #000000);
-    --background-image: repeating-linear-gradient(
-        to left,
-        #000000 0 2px,
-        transparent 2px 4px
-    ),
-    linear-gradient(to bottom,
-    #007F0C, #004306),
-    repeating-linear-gradient(to bottom, 
-    #000000 0 2px,
-    transparent 2px 4px);
+    --background-image: repeating-linear-gradient(90deg, #000 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+    repeating-linear-gradient(180deg, #000 0 2px, rgb(0 0 0 / 0) 2px 4px),
+     linear-gradient(180deg, #007f0c 0%, #004306 100%);
     --accent-color: #00CC14;
     --header-color: #000000;
+    --font-variation-settings: 465;
+    --font-variation-title: 785;
+    --border-shadow: 3px 3px 0px 0px rgba(0, 204, 20, 1);
+
 }
 
 @media(prefers-color-scheme: dark) {
@@ -57,20 +53,16 @@
     --watermark-border: #000000;
     --watermark-color: #00CC14;
     --background-color: #000000;
-    --like-color: #00CC14;
+    --like-color: #FF0000;
     --click-heart: #000000;
     --shadow-like: drop-shadow(2px 2px 0px #000000);
-    --background-image: repeating-linear-gradient(
-        to left,
-        #000000 0 2px,
-        transparent 2px 4px
-    ),
-    linear-gradient(to bottom,
-    #007F0C, #004306),
-    repeating-linear-gradient(to bottom, 
-    #000000 0 2px,
-    transparent 2px 4px);
+    --background-image: repeating-linear-gradient(90deg, #000 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+    repeating-linear-gradient(180deg, #000 0 2px, rgb(0 0 0 / 0) 2px 4px), 
+    linear-gradient(180deg, #007f0c 0%, #004306 100%);
     --accent-color: #00CC14;
     --header-color: #000000;
+    --font-variation-settings: 465;
+    --font-variation-title: 785;
+    --border-shadow: 3px 3px 0px 0px rgba(0, 204, 20, 1);
 }
 }
